# axiomdoc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: DATASET_PLAN.md  build_manifest.py  labeled_eval.py  merge_results.py  run_benchmarks.py  shard_manifest.py
benchmarks/datasets/: README.md
benchmarks/manifests/: docling-stratified-64-capped200.json  docling-stratified-64.json  pdf-corpus-1076.json  pdf-only-1076.json  pilot-mixed.json  target-1000-plan.json
benchmarks/manifests/docling-stratified-64-capped200-shards/: shard-01.json  shard-02.json  shard-03.json  shard-04.json
benchmarks/manifests/pdf-only-1076-shards/: shard-01.json  shard-02.json  shard-03.json  shard-04.json
benchmarks/results/: docling.json  latest.json  pdf-only-1076-axiomdoc.json  pdf-only-1076-pdfplumber.json  pdf-only-1076-pymupdf.json  pilot-mixed.json
docs/: architecture.md
src/axiomdoc/: __init__.py  cli.py  indexing.py  models.py  pipeline.py
src/axiomdoc/exporters/: markdown.py  xml.py
src/axiomdoc/parsers/: base.py  docx.py  pdf.py  placeholders.py  registry.py  stub.py  xlsx.py  xml.py
tests/: test_benchmarks.py  test_exporters.py  test_hardening.py  test_parsers.py
tests/fixtures/: sample_labels.json
